--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ table {
   color: #000000;
   font-size: 25px;
   text-align: center;
-  margin-left: 150px;
 }
 
 a {
@@ -38,7 +37,6 @@ a {
   color: #000000;
   font-size: 25px;
   text-align: center;
-  margin-left: 150px;
   size: 20px;
 }
 
@@ -48,4 +46,11 @@ h3 {
   text-transform: uppercase;
   text-align: center;
   margin-bottom: 2rem;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
