--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: #f5f5f5;
+  background: #303030;
+  color: aliceblue;
 }
 
 h1 {
